[tool.poetry]
name = "house-prices-forecast"
version = "1.0.0"
description = "Using Machine Learning to predict future house prices"
authors = ["Matheus Rabelo <matheusfreirerabelo@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7.5"
numpy = "1.17.2"
jupyter = "^1.0.0"
ipykernel = "^5.3.4"
pystan = "^2.19.1"
fbprophet = "^0.7.1"
pandas = "^1.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
